Assignment 1/testcases/negative/T3.java
#defineExpr NUM(a) (10+a) //Error: defineExpr must have atleast 3 arguments

class T3 {
    public static void main(String[] a){
      System.out.println (0);
    }
}
